--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta content="Alexandros Kourtis" name="author">
     <meta content="width=device-width, initial-scale=1.0, shrink-to-fit=no" name="viewport">
     <link href="./assets/virtual%20guide.png" rel="icon" type="image/png"/>
-    <title> App</title>
+    <title>gaide.io</title>
     <meta content="The official website of " name="description">
     <link crossorigin="anonymous" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
           integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" rel="stylesheet"/>
