--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link href="assets/css/style.css" rel="stylesheet">
 </head>
 
-<body data-bs-offset="56" data-bs-spy="scroll" data-bs-target="#mainNav" id="page-top">
+<body data-bs-offset="56" data-bs-spy="scroll" data-bs-target="#mainNav" id="page-top" style="overflow: hidden">
 <!--<nav class="navbar navbar-ubuntuLight navbar-expand-lg fixed-top bg-white" id="mainNav"-->
 <!--     style="background: #004AAD !important;">-->
 <!--    <div class="container"><a class="navbar-brand fw-bold" href="./index.html"-->
@@ -49,12 +49,14 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-10 mx-auto text-center">
-                    <h2 class="section-heading" id="sectionheading">Coming soon</h2>
+                    <img src="./assets/virtualguidetrans.png" style="width: 250px;" alt="">
+                    <br>
                     <br>
                     <h4>Welcome to gaide.io - the ultimate travel companion app that will change the way you explore new cities. With gaide.io, you can say goodbye to the stress and confusion of traveling to an unfamiliar destination. Our app provides personalized recommendations, interactive maps, and insider knowledge to guide you to the best attractions, hidden gems, and local cuisine. Whether you're a seasoned traveler or planning your first adventure, gaide.io is your go-to source for making unforgettable memories. Download the app and get ready to discover the world like never before.</h4>
                     <!-- <div class="badges mt-5"><a class="badge-link" href="#"><img alt="" -->
                                                                                  <!-- src="assets/img/google-play-badge.svg"></a> -->
-                    </div>
+                    <br>  <h2 class="section-heading" id="sectionheading">Coming soon</h2>
+                </div>
                 </div>
             </div>
         </div>
